# tin

./: .gitignore  .gitlab-ci.yml  .releaserc  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
apeye/: __init__.py  api.py  base.py  config.py  exceptions.py  models.py  response.py  version.py
apis/freshservice/: freshservice-api.yml  freshservice-models.yml  freshservice.yml  fs-api.yml  fs-models.yml  fs.yml
apis/kace/: kace-api.yml  kace.yml
apis/netbox/: netbox-swagger.json  netbox.yml
apis/okta/: okta-api.yml  okta-objects.yml  okta.yml
apis/oomnitza/: oomnitza-api.yml  oomnitza.yml
apis/phpipam/: ipam-api.yml  ipam-objects.yml  ipam.yml
doc/: Makefile  conf.py  index.rst
doc/source/: apeye.rst  modules.rst
test/: test_apeyeapi.py  test_apeyeapiclass.py  test_apeyeapimethod.py  test_api_class.py  test_class.py  test_config.py  test_methods.py  test_models.py
test/data/api/: test-models.yml  test.json  test.yml  testservice-api.yml  testservice-models.yml  testservice.json  testservice.yml
tin/: api.py  base.py  config.py  models.py
