[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apeye"
authors = [{name = "Mike Culbertson", email = "mikeculbertson@protonmail.com"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://gitlab.com/explody/apeye"
